@@ -355,11 +355,7 @@ function b_system_notification_show()
 {
     global $xoopsConfig, $xoopsUser, $xoopsModule;
     include_once XOOPS_ROOT_PATH . '/include/notification_functions.php';
-    if ( file_exists( XOOPS_ROOT_PATH."/language/".$xoopsConfig['language']."/notification.php" ) ) {
-		include XOOPS_ROOT_PATH."/language/".$xoopsConfig['language']."/notification.php";
-	} else {
-		include XOOPS_ROOT_PATH."/language/english/notification.php";
-	}
+	icms_loadLanguageFile('core', 'notification');
     // Notification must be enabled, and user must be logged in
     if (empty($xoopsUser) || !notificationEnabled('block')) {
         return false; // do not display block
