@@ -1,0 +1,25 @@
+<?php
+// $Id: plugins.php,v 1.1 2005/04/20 03:27:04 gij Exp $
+// FILE		::	plugins.php
+// AUTHOR	::	Ryuji AMANO <info@ryus.biz>
+// WEB		::	Ryu's Planning <http://ryus.biz/>
+//
+define("_PI_WAITING_WAITINGS","Waitings");
+define("_PI_WAITING_SUBMITTED","Submitted");
+define("_PI_WAITING_INACTIVE_USERS","Inactive Users");
+define("_PI_WAITING_BROKENS","Brokens");
+define("_PI_WAITING_MODREQS","Modreqs");
+define("_PI_WAITING_REQUESTS","Requests");
+define("_PI_WAITING_REVIEWS","Reviews");
+define("_PI_WAITING_PREVIEWS","Previews");
+define("_PI_WAITING_COMMENTS","Comments");
+define("_PI_WAITING_LINKS","Links");
+define("_PI_WAITING_FILES","Files");
+define("_PI_WAITING_BLOGS","Blogs");
+define("_PI_WAITING_EVENTS","Events");
+define("_PI_WAITING_ASKED","Asked");
+define("_PI_WAITING_NEWANSWERS","New Answers");
+define("_PI_WAITING_ANSWERED","Answered");
+define("_PI_WAITING_WAITINGS_FMT","Waitings (%s)");
+
+?>
