@@ -180,6 +180,7 @@ ImpressCMS ChangeLog
 * #378: installation fails. (stranger)
 * #406: all errors are not shown in admin menu. (stranger)
 * #466: Changing profile name to improfile. (stranger)
+* #469: warning: error when submitting in admin personalization settings. (stranger)
 
 
 == Impresscms 1.1.2==
